Selected platform button and filtering now works, the random picker function also works.Bugs are ---> Last ajax call url is not properly formatted, can fix that by appending the game id as string to url..., another throught the games that fall into the users preferences, there doesn't seem to be a reason to make 2 ajax calls... Just cache the data and then pull it out, that way tou can use the image of every game for the spinner... maybe if the load is not too long.

--- a/css/styling.css
+++ b/css/styling.css
@@ -90,9 +90,8 @@ section{
 	list-style-type: none;
 }
 
-/* .button_column*/
- .button_column button{
-
+/* .button_column changing this so it applies to all buttons*/	
+  button{
 	display: inline-block;
 	margin: 0 10px 0 0 ;
 	padding: 10px;
@@ -117,13 +116,13 @@ section{
 
  }
 
-.button_column button:hover, 
-.button_column button.hover{
+button:hover, 
+button.hover{
 	background-color: #417cb8;
 }
 
-.button_column button:active, 
-.button_column button.active{
+ button:active, 
+ button.active{
  /* Creates push button effect
  translate shadow down (normal shodow value - pressed down 
  shadow value = translateY font-variant-ligatures: ) */
@@ -193,4 +192,17 @@ to{width:100%; text-indent:0}
 .already_visible {
   transform: translateX(0px);
   animation: none;
+}
+
+
+.execution_page button{
+	background-color: #ffffff;
+	color: #000000; 
+	width: 15%;
+	height: 15%;
+	color: #000000;
+	font-size: 150%;
+	text-align: center;
+	position: absolute;
+    margin-left: 30%;
 }
